<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9d9"
    tools:context="com.example.kachucool.gapshap.ProfileActivity"
>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/default_name"
        android:textColor="@android:color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/deault_avatar" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/default_status"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/profile_sendRequest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_decline_frd_req"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/profile_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_sendRequest_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/total_friends"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/profile_decline_frd_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white" />
</RelativeLayout>